# nicks-pylib

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
tests/: test_random.py
